
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int (* wrap ) (int **,int *,char const*) ;int member_0; } ;
typedef TYPE_1__ git_stream_registration ;
typedef int git_stream ;


 int GIT_ERROR_SSL ;
 int GIT_STREAM_TLS ;
 int assert (int) ;
 int git_error_set (int ,char*) ;
 int git_mbedtls_stream_wrap (int **,int *,char const*) ;
 int git_openssl_stream_wrap (int **,int *,char const*) ;
 int git_stransport_stream_wrap (int **,int *,char const*) ;
 scalar_t__ git_stream_registry_lookup (TYPE_1__*,int ) ;

int git_tls_stream_wrap(git_stream **out, git_stream *in, const char *host)
{
 int (*wrap)(git_stream **, git_stream *, const char *) = ((void*)0);
 git_stream_registration custom = {0};

 assert(out && in);

 if (git_stream_registry_lookup(&custom, GIT_STREAM_TLS) == 0) {
  wrap = custom.wrap;
 } else {







 }

 if (!wrap) {
  git_error_set(GIT_ERROR_SSL, "there is no TLS stream available");
  return -1;
 }

 return wrap(out, in, host);
}
